--- a/DesafioTransfeera/.env
+++ b/DesafioTransfeera/.env
@@ -1,6 +1,6 @@
-DB_HOST=localhost
-DB_USER=postgres
-DB_PORT=5432
-DB_NAME=gabrieldemarchimomm
-DB_SCHEMA=banco
-NODE_PORT=3030
+DB_HOST=
+DB_USER=
+DB_PORT=
+DB_NAME=
+DB_SCHEMA=
+NODE_PORT=
